syntax = "proto3";

import "commondefine.proto";

package Micro.Future.Message;

message PBUserInfo
{
   DataHeader header = 1;
   string userId = 2;
   string userName = 3;
   string password = 4;
   string firstName = 5;
   string lastName = 6;
   int32 gender = 7;
   string company = 8;
   string email = 9;
   string contactNum = 10;
   string identityNum = 11;
   string address = 12;
   string zipcode = 13;
   int32 role = 14;
   int32 permission = 15;
}

message PBUserInfoList
{
	DataHeader header = 1;
	repeated PBUserInfo userInfo = 2;
}